# flackie

./: .env.example  .gitignore  CMakeLists.txt  alldisplays.py  bluetooth.py  controls.py  display.py  go.sh  library.py  main.cpp  main.py  navigation.py  olddisplay.py  oldmain.py  player.py  requirements.txt  state.py  todo  ui.py  utils.py
example/: 0inch96_spi0ce0.py  0inch96_spi0ce1.py  1inch3_spi1ce0.py  CPU.py  double_0inch96_spi.py  key_double.py
lib/: Gain_Param.py  LCD_0inch96.py  LCD_1inch3.py  lcdconfig.py
python/: display.py  library.py  main.py  requirements.txt
python/examples/: hello-world-4-colour.py
